# CudaSampleUtils

./: .gitignore  CMakeLists.txt  README.md
DeviceInfo/: CMakeLists.txt  main.cpp
RGBToGray/: CMakeLists.txt  main.cpp  rgb_to_gray.cu  rgb_to_gray.cuh
basic_compute/: CMakeLists.txt  cucommon.cuh  cv_resize.cu  main.cpp  operate.cu  operate.cuh  sparse_matrix_transpose.cu
common/: common.cpp  common.h
